# Elastic

./: .bzrignore  .gitignore  .travis.yml  CHANGELOG.md  Contributors  MANIFEST.in  README.md  README.rst  __version__.txt  _config.yml  elastic.py  index.html  index.md  paper.bib  paper.md  params.json  parcalc.py  pvasp.py  pypideploy.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish-to-test-pypi.yml  pypi.yml  testpypi.yml
cli/: elastic  elastic.py
conda/: .binstar.yml  VERSION  anaconda_deploy.sh  build.sh  meta.yaml  meta.yaml.tmpl  update_versions.sh
conda-dev/: .binstar.yml  meta.yaml  meta.yaml.tmpl  update_versions.sh
conda/elastic/: meta.yaml
doc/source/: conf.py  conf.py.tmpl  endmatter.rst  examples.rst  index.rst  intro.rst  modules.rst  usage.rst
docs/: Makefile  index.md
docs/notebook/: lib-usage.ipynb
docs/source/: cli-usage.rst  conf.py  conf.py.tmpl  endmatter.rst  index.rst  lib-usage.rst  modules.rst  usage.rst
elastic/: __init__.py  elastic.py  parcalc.py
elastic/cli/: elastic.py
example/: example1.py  example2.py  example3.py
examples/: example1.py  example2.py  example3.py
examples/scripts/: check-job  run-on-tsi  run-vasp5-lock  run_vasp.py
parcalc/: __init__.py  parcalc.py
test/: elastic  test.py  test_elastic.py
tests/: parcalc  runtest.sh  test.py  test_01.py  test_02.py  test_elastic.py
tests/data/: INCAR  KPOINTS  POSCAR  abinit  cij_001.POSCAR  cij_002.POSCAR  cij_004.POSCAR  cij_005.POSCAR  cij_006.POSCAR  cij_007.POSCAR  cij_008.POSCAR  cij_009.POSCAR  cij_010.POSCAR  (+6 more)
(+19 files in other folders)
